--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@ title: README.fm | A podcast bridging the gap between people and technology for 
       <h1 class="font-mono text-4xl">README.fm</h1>
       <h2 class="font-mono lg:max-w-md xs:max-w-xs">A podcast aimed at bridging the gap between people and technology for social good</h2>
       <br>
-      <button class="font-mono bg-white text-black px-4 py-2 rounded border border-gray-400">Check it out</button>
+      <a class="font-mono bg-white text-black px-4 py-2 rounded border border-gray-400" href="https://soundcloud.com/readme-fm">Check it out</a>
     </div>
     <div class="">
       <img src="https://media.licdn.com/dms/image/C560BAQGRF2c7mQfPgw/company-logo_400_400/0?e=1570665600&v=beta&t=g9X1W0ao4uciV-rUKCOPebNwJt9EY5pu8_nHLDN_0dI" class="rounded shadow-2xl max-w-xs max-h-xs" alt="README.fm Logo">
