Fixed minor bug with image path

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,7 +12,7 @@ title: README.fm | A podcast bridging the gap between people and technology for 
       <a class="font-mono bg-white text-black px-4 py-2 rounded border border-gray-400" href="https://soundcloud.com/readme-fm">Check it out</a>
     </div>
     <div class="">
-      <img src="/logo.png" class="rounded shadow-2xl max-w-xs max-h-xs" alt="README.fm Logo">
+      <img src="/public/logo.png" class="rounded shadow-2xl max-w-xs max-h-xs" alt="README.fm Logo">
     </div>
   </div>
 </main>
