Made url shorter

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,7 @@ title: README.fm | A podcast bridging the gap between people and technology for 
       <h2 class="font-mono lg:max-w-md xs:max-w-xs"><span class="text-yellow-500">**</span>A podcast aimed at bridging the gap between people and technology for social good<span class="text-yellow-500">**</span></h2>
       <br>
       <span class="font-mono">
-        [<span class="text-red-700">Check it out</span>](<a class="text-blue-400" href="https://soundcloud.com/readme-fm">https://soundcloud.com/readme-fm</a>)
+        [<span class="text-red-700">Check it out</span>](<a class="text-blue-400" href="https://soundcloud.com/readme-fm">soundcloud.com/readme-fm</a>)
       </span>
     </div>
     <div>
