--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,6 +1,6 @@
 ---
 layout: index.11ty.js
-title: README.fm | A podcast bridging the gap between people and technology for social good
+title: README.fm | humanizing technology through podcasts
 ---
 
 <main>
