--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,4 +18,9 @@ title: README.fm | A podcast bridging the gap between people and technology for 
       <img src="/public/logo.png" class="rounded shadow-2xl max-w-xs max-h-xs" alt="README.fm Logo">
     </div>
   </div>
+  <footer class="flex flex-wrap items-center justify-around py-5 font-mono bg-gray-200 text-center">
+    <span class="px-4">
+      <b>README.fm</b> is a project started by <a class="text-blue-500" href="https://diff.org.za">Diff.org.za</a>
+    </span>
+  </footer>
 </main>
