Updated the meta info

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,6 +1,6 @@
 ---
 layout: index.11ty.js
-title: README.fm | A podcast bridging the gap between people and technology for social good
+title: "README.fm: A civic-tech podcast"
 ---
 
 <main>
@@ -18,9 +18,4 @@ title: README.fm | A podcast bridging the gap between people and technology for 
       <img src="/public/logo.png" class="rounded shadow-2xl max-w-xs max-h-xs" alt="README.fm Logo">
     </div>
   </div>
-  <footer class="flex flex-wrap items-center justify-around py-5 font-mono bg-gray-200 text-center">
-    <span class="px-4">
-      <b>README.fm</b> is a project started by <a class="text-blue-500" href="https://diff.org.za">Diff.org.za</a>
-    </span>
-  </footer>
 </main>
